--- a/ethereum/1. ethereum.md
+++ b/ethereum/1. ethereum.md
@@ -1,37 +1,86 @@
 # 1. Ethereumの概要
 
-2023/11/24 Shigeichiro Yamasaki
+2024/05/10
+Shigeichiro Yamasaki
 
-## Infura
 
-Infuraは Ethereum 開発のための Node as a Serviceです
-* 自前で Etherumノードを立ち上げる必要がありません
+MacOSX と ubuntu を基本にします
 
-MacOSX を基本にします
-
-## インストール
-
-### node.js npm yarn のインストール
+* MacOSX 
 
 homebrew はインストール済とします．
-
-#### Node.js のインストール
-
 ```bash
 brew update
 brew upgrade
-brew install nodebrew
+```
 
-# 
-nodebrew install-binary latest
-nodebrew setup
-# 最新バージョンがv21.2.0のとき
-nodebrew use v21.2.0
+* ubuntu
 
-echo 'export PATH=$HOME/.nodebrew/current/bin:$PATH' >> ~/.zshrc
-source ~/.zshrc
+```bash
+sudo apt update
+sudo apt upgrade -y
+```
 
-npm install -g yarn
+
+
+
+## インストール
+
+
+## node.js npm yarn のインストール
+
+### Node.js のインストール
+
+* MacOSX 
+
+```bash
+$ brew install nodebrew
+$ nodebrew install-binary latest
+$ nodebrew setup
+$ nodebrew use v21.2.0
+$ echo 'export PATH=$HOME/.nodebrew/current/bin:$PATH' >> ~/.zshrc
+$ source ~/.zshrc
+# 確認
+$ node -v
+v21.2.0
+```
+
+* ubuntu
+
+```bash
+$ sudo apt install -y nodejs npm
+# 確認
+$ node -v
+v21.6.2
+```
+
+
+### yarn のインストール
+
+* MacOSX 
+
+```bash
+$ npm install -g yarn
+
+changed 1 package in 672ms
+npm notice 
+npm notice New minor version of npm available! 10.2.4 -> 10.7.0
+npm notice Changelog: https://github.com/npm/cli/releases/tag/v10.7.0
+npm notice Run npm install -g npm@10.7.0 to update!
+npm notice 
+```
+
+* ubuntu
+
+```bash
+$ npm install -g yarn
+
+added 1 package in 1s
+npm notice 
+npm notice New minor version of npm available! 10.2.5 -> 10.7.0
+npm notice Changelog: https://github.com/npm/cli/releases/tag/v10.7.0
+npm notice Run npm install -g npm@10.7.0 to update!
+npm notice 
 ```
 
 ## Infuraアカウントの作成
@@ -46,3 +95,8 @@ Infura のAPIを呼ぶために必要となる文字列
 
 
 
+## Infura
+
+
+Infuraは Ethereum 開発のための Node as a Serviceです
+* 自前で Etherumノードを立ち上げる必要がありません
