--- a/bitcoin/0.bitcoin-core-signet.md
+++ b/bitcoin/0.bitcoin-core-signet.md
@@ -1,14 +1,13 @@
 # 0. Bitcoin core Signet ノードの構築
 
-2024/03/14  更新 Shigeichiro Yamasaki 
-
+2024/05/24
+更新 Shigeichiro Yamasaki 
 
 ## install 方法
 
 ### MacOSXの場合
 
 [Bitcoin core ダウンロードサイト](https://bitcoincore.org/bin/)からapple のdmg 形式のインストーラをダウンロードする
-
 
 #### インストーラで bitcoin core をインストールしてアプリを起動
 
@@ -38,7 +37,7 @@ sudo snap install bitcoin-core
 
 
 ```bash
-bitcoin-core.daemon 
+bitcoin-core.daemon
 ```
 
 `<control>`-c でプロセスを終了させる
@@ -56,13 +55,13 @@ bitcoin-core.daemon
 
 bitcoin.confの場所
 
-* ubuntu で通常インストールしたときの bitcoin.conf のデフォルトの場所
-    * ~/.bitcoin/bitcoin.conf
+
 * ubuntu でsnap でインストールした場bitcoin.conf のデフォルトの場所
     * ~/snap/bitcoin-core/common/.bitcoin/bitcoin.conf
 * MacOSX でパッケージインストールしたときのbitcoin.conf のデフォルトの場所
     * ~/Library/Application Support/Bitcoin/bitcoin.conf
-
+* ubuntu で通常インストールしたときの bitcoin.conf のデフォルトの場所
+    * ~/.bitcoin/bitcoin.conf
 
 ###  bitcoin.conf を編集
 
@@ -127,10 +126,11 @@ bitcoin-core には bitcoin ワレットの機能があります．
 bitcoinを受領したり送金したりするためにはワレットが必要です．
 
 ここではワレット名を alice としています．
+
 自分の名前などに変更することができます．
 
 ```bash
-bitcoin-core.cli -named createwallet wallet_name=alice 
+bitcoin-core.cli -named createwallet wallet_name=alice
 ```
 
 ### ワレットの情報が格納されている場所
