--- a/bitcoin/2.bitcoin-core-details.md
+++ b/bitcoin/2.bitcoin-core-details.md
@@ -1,12 +1,61 @@
 # 2. bitcoin core の詳細
 
-2024/05/25  更新 Shigeichiro Yamasaki
+2024/05/26  更新 Shigeichiro Yamasaki
 
-## ビットコイン開発コミュニティとBIP
 
 * [メーリングリスト bitcoin-dev](https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev)
 * [Slack: https://bitcoincore.slack.com/](https://bitcoincore.slack.com/)
 * [BIP](https://github.com/bitcoin/bips)
+
+## インストールすべきツール
+
+###  jq コマンド
+
+JSON形式のデータを処理するツール
+
+MacOSX
+
+```bash
+brew install jq
+```
+
+ubuntu
+
+インストール不要
+
+### Ruby 言語
+
+[Ruby インストール方法](https://github.com/ShigeichiroYamasaki/yamalabo/blob/master/ruby/ruby.md)
+
+
+## 所有とdiscriptor
+
+当初，ブロックチェーン上のデジタル資産の所有の概念は，当事者の秘密鍵を中心に構成されていました．
+
+しかし P2SH などのスクリプトへの送金の概念の登場によって秘密鍵だけでは所有の概念を表現できなくなりました．
+
+そこで，自分が所有するUTXOを定義するために BIP 380 で output script descriptor という言語が提案されました．
+
+### output script descriptor
+
+Scirpt Experession、Key Expressionとチェックサムで構成されています．
+
+* Script Expression
+
+    Bitcoinのスクリプトに直接対応する式。これらの式は関数として記述され、引数を取る
+
+* Key Expression
+
+    Script Expressionの引数としてよく使われる式に、Key Expression（KEYと表記）がある。これは公開鍵または秘密鍵と、オプションとしてその鍵のオリジンに関する情報を表す
+
+* チェックサム
+
+  * hexエンコードされた公開鍵
+  
+  * WIFエンコードされた秘密鍵
+  
+  * xpubエンコードされた拡張公開鍵、もしくはxprvエンコードされた拡張秘密鍵
+
 
 ## 一連の流れで演習します
 
@@ -28,6 +77,8 @@
     ★ (TX2 ~ TX7) はそれぞれP2PK, P2PKH, P2SH, P2WPKH, P2WSH の5つのタイプのoutputを持つ
 3. 6個のタイプの異なるUTXOをinputとして，１個のUTXOにまとめるトランザクション TX8 を作成する
     ★ P2SH, P2WSH のUTXOをワレットに認識させる必要があります。
+
+## ワレットの作成
 
 
 ## 目次
@@ -635,13 +686,14 @@ mzYqU8jSicpwstG9rA7jBrjgLVkzDPjo8J
 その典型例がマルチシグ（多重署名）用アドレスです。
 
  #### マルチシグ用公開鍵のリストの作成
+
  
 アドレスの生成には、n人の署名者たちの公開鍵が必要です。
 
 ここでは P2PK と同様の方法で３人の公開鍵を生成し，シェル変数 PUBKEY1, PUBKEY2, PUBKEY3 に代入します．
 
 ```bash
-bitcoin-core.cli getnewaddress
+SIGNER1=`bitcoin-core.cli getnewaddress`
 
 =>
 tb1qpw85yzdg9tmq0h9ajymcs0z2c54tt5th2v9j4z
@@ -1654,52 +1706,79 @@ P2PK_TXID="265b7d4497d8d87c548132e823833070fe80969d6bec93be2cb59c9ab4877640"
 
 この時点で　bitcoin core のワレット機能でUTXOとして確認可能なものは　P2PK, P2PKH, P2WPKH, PtTR  のoutputだけです。
 
-P2SHとP2WSH のUTXOは，ワレットには認識されません。
+P2SH と P2WSH のUTXOは，ワレットには認識されません。
 
 ```bash
 bitcoin-core.cli listunspent
+
 =>
 [
   {
-    "txid": "aa9d14b180f967d85f579b7d90151e5f6f5c7dbf81198d2ca0411fbcb119470a",
+    "txid": "f66f7c67f0e2edab7d27d316662c31a9a5f33fe68dd9725854fe04bb7f23563f",
     "vout": 0,
-    "address": "tb1q9ejzgpj47rpt6j86c2epvzgz654caek2ga36tn",
+    "address": "mzYqU8jSicpwstG9rA7jBrjgLVkzDPjo8J",
+    "label": "user_p2pkh",
+    "scriptPubKey": "76a914d0c58609bfeafe97668feab8f356eccc78346c0588ac",
+    "amount": 0.00018000,
+    "confirmations": 18,
+    "spendable": true,
+    "solvable": true,
+    "desc": "pkh([937090de/44h/1h/0h/0/0]03ca43b85715c22f748684bdf20870b0b5a858a69178a21b4a957ddfcbafea57d8)#l9r8akhc",
+    "parent_descs": [
+      "pkh(tpubD6NzVbkrYhZ4YbFapq62MDLBVude54h2m2seJRgt5oKqRSX52nft4uGXQrQ34XVZfZc877UTb5EzLVPJ7MYh8YB4vYXwho56sDwc5jCKhs4/44h/1h/0h/0/*)#gg0qedgx"
+    ],
+    "safe": true
+  },
+  {
+    "txid": "0bec2ecf9561b081d13d4dd6909a79114fdd3b9d9bfcc515cf9de96ccb31aa2c",
+    "vout": 0,
+    "address": "tb1qjf9kvs5k698luqwhkl9jqtdujwnwrx0250mnda",
+    "label": "bech32",
+    "scriptPubKey": "0014924b664296d14ffe01d7b7cb202dbc93a6e199ea",
+    "amount": 0.00018000,
+    "confirmations": 18,
+    "spendable": true,
+    "solvable": true,
+    "desc": "wpkh([937090de/84h/1h/0h/0/23]028cc0c1f80aefad0aac92be01ca0f450818e4dca5e3c5b60e3849b6e5f032b9ac)#hulp44e3",
+    "parent_descs": [
+      "wpkh(tpubD6NzVbkrYhZ4YbFapq62MDLBVude54h2m2seJRgt5oKqRSX52nft4uGXQrQ34XVZfZc877UTb5EzLVPJ7MYh8YB4vYXwho56sDwc5jCKhs4/84h/1h/0h/0/*)#2jvtrjwl"
+    ],
+    "safe": true
+  },
+  {
+    "txid": "5ec355265c0dcddb3e71a1888d5b511e6afb26da9f225fca1551915576fd460f",
+    "vout": 6,
+    "address": "tb1qflzrst6q7pd5mfswluhruv8twqnpm49lqrhs9y",
     "label": "",
-    "scriptPubKey": "00142e64240655f0c2bd48fac2b2160902d52b8ee6ca",
-    "amount": 0.00018000,
-    "confirmations": 4,
+    "scriptPubKey": "00144fc4382f40f05b4da60eff2e3e30eb70261dd4bf",
+    "amount": 0.00878000,
+    "confirmations": 73,
     "spendable": true,
     "solvable": true,
-    "desc": "wpkh([b6437264/0'/0'/98']031b6f543a2a7ddd2b1358a2b1bdbef666cb302904b53dfc2f066889e914e4bb5b)#jvqdyz33",
-    "safe": true
-  },
-
-  {
-    "txid": "6ae4c0efb1ff8612f649cf673450d78a565e1b5788c678f22ae28ae8711e3ec2",
-    "vout": 0,
-    "address": "mmZSyUyxaZJJNXCviNmUcg2jJ5KfSUJMZt",
-    "label": "user3",
-    "scriptPubKey": "76a914424986ff15df8a17a04f2b07520f0ef1dc9b742288ac",
-    "amount": 0.00018000,
-    "confirmations": 12,
-    "spendable": true,
-    "solvable": true,
-    "desc": "pkh([b6437264/0'/0'/97']0222e18123552767a58da9f3749a4fd014fe991be3469d0ee01618080734ec6701)#24jv8ctw",
+    "desc": "wpkh([937090de/84h/1h/0h/0/0]031180c3c30b662433e49e7a81049361dbbfff662cef4256fbcbee403875f43b33)#9wux8ep7",
+    "parent_descs": [
+      "wpkh(tpubD6NzVbkrYhZ4YbFapq62MDLBVude54h2m2seJRgt5oKqRSX52nft4uGXQrQ34XVZfZc877UTb5EzLVPJ7MYh8YB4vYXwho56sDwc5jCKhs4/84h/1h/0h/0/*)#2jvtrjwl"
+    ],
     "safe": true
   },
   {
-    "txid": "08701c7f0d4db0dd5da01df4ad750e6819de718abe1ea32d917241a89c88379c",
+    "txid": "0903ffacbb7f212d81902d54979409610dc4b2c594a66789f35866d14f4e3dc1",
     "vout": 0,
-    "address": "mgX9TGp5SxT6jczaKhf6fVDUdfsg1m45wf",
-    "scriptPubKey": "21027544b898d2d886a7ee733f2cf3da01bfd5d2350fedf602f4d1b78412b5f4d851ac",
-    "amount": 0.00016000,
-    "confirmations": 1,
+    "address": "tb1pzwmas3lmkrn63wtgulylmtx79fvg3x5e0d6u9g50l3y8c3k0hvxqez8qxa",
+    "label": "",
+    "scriptPubKey": "512013b7d847fbb0e7a8b968e7c9fdacde2a58889a997b75c2a28ffc487c46cfbb0c",
+    "amount": 0.00018000,
+    "confirmations": 11,
     "spendable": true,
     "solvable": true,
-    "desc": "pk([60d80dee/0'/0'/35']027544b898d2d886a7ee733f2cf3da01bfd5d2350fedf602f4d1b78412b5f4d851)#24lz4ah2",
+    "desc": "tr([937090de/86h/1h/0h/0/2]ca1c9ea413d7508a75862b8b400ae90b18e79cfc6578c214a6df413c7d52fd03)#6gvty8zd",
+    "parent_descs": [
+      "tr(tpubD6NzVbkrYhZ4YbFapq62MDLBVude54h2m2seJRgt5oKqRSX52nft4uGXQrQ34XVZfZc877UTb5EzLVPJ7MYh8YB4vYXwho56sDwc5jCKhs4/86h/1h/0h/0/*)#fyp9rl55"
+    ],
     "safe": true
   }
 ]
+
 ```
 
 ### bitcoin core のワレットにマルチシグ情報を登録する
@@ -1708,25 +1787,60 @@ P2SHとP2WSHのマルチシグアドレス生成時に生成された descriptor
 
 * P2SHのdescriptor
 
-```
-"sh(multi(2,0237a1e78baa7be5389c51f1836fb3b52c7163ea869281559c8ac94e69898793d4,03ab2e94ae215cb3bdba9269588f32c8df33c2140a554149850e01aa18b2bea645,0345e92ef8d7d03efce3878360b0fc57bb82d5d291e9e483c296f409165b80121b))#valuvj2y"
+```bash
+echo $P2SH_DESCRIPTOR
+
+=>
+sh(multi(2,037032106297741808e66c947dab836f3f3c28189596331e48861304674e2583d0,0210c7796ac91075ff6d4708319094707a976d265263cac42cc535104803439f84,0359ee82a3b3ec86bc8c29c149cacde7af2e00cd8952ee5767d6c221a2807c4094))#c968pfza
 ```
 
 * P2WSHのdescriptor
 
-```
-"wsh(multi(2,0380204524e4cf427a5a5da5826b531bc327c869230118433c5ab503544d1c1a65,03efe8c25a79d87030ca57d1a630afd214bd7058563dcb35aee31f82bda571955b,0290d9f66da40f2c4962b20d5a1e3ad6a3694fdfc60fef4df1126a9d54984b9e0b))#ezclpasq"
+```bash
+echo $P2WSH_DESCRIPTOR
+
+=>
+wsh(multi(2,037032106297741808e66c947dab836f3f3c28189596331e48861304674e2583d0,0210c7796ac91075ff6d4708319094707a976d265263cac42cc535104803439f84,0359ee82a3b3ec86bc8c29c149cacde7af2e00cd8952ee5767d6c221a2807c4094))#04tn9tty
 ```
 
 一般的には，マルチシグは複数の主体のワレットで署名しなければなりません。
 この例では，単純化のために署名に必要なすべての秘密鍵が一つのワレットに入っています。
 
 ```
-importmulti <JSON形式のインポート情報(descriptor)> 
+importdescriptors 
+
+[
+  {                                    (json object)
+    "desc": "str",                     (string, required) Descriptor to import.
+    "active": bool,                    (boolean, optional, default=false) Set this descriptor to be the active descriptor for the corresponding output type/externality
+    "range": n or [n,n],               (numeric or array) If a ranged descriptor is used, this specifies the end or the range (in the form [begin,end]) to import
+    "next_index": n,                   (numeric) If a ranged descriptor is set to active, this specifies the next index to generate addresses from
+    "timestamp": timestamp | "now",    (integer / string, required) Time from which to start rescanning the blockchain for this descriptor, in UNIX epoch time
+                                       Use the string "now" to substitute the current synced blockchain time.
+                                       "now" can be specified to bypass scanning, for outputs which are known to never have been used, and
+                                       0 can be specified to scan the entire blockchain. Blocks up to 2 hours before the earliest timestamp
+                                       of all descriptors being imported will be scanned.
+    "internal": bool,                  (boolean, optional, default=false) Whether matching outputs should be treated as not incoming payments (e.g. change)
+    "label": "str",                    (string, optional, default='') Label to assign to the address, only allowed with internal=false
+  },
+  ...
+]
+
+
+```
+
+JSON形式のインポート情報(descriptor)
+
+```bash
+echo "[{\"desc\": \"$P2SH_DESCRIPTOR\", \"timestamp\": \"now\"}]"
+
+=>
+[{"desc": "sh(multi(2,037032106297741808e66c947dab836f3f3c28189596331e48861304674e2583d0,0210c7796ac91075ff6d4708319094707a976d265263cac42cc535104803439f84,0359ee82a3b3ec86bc8c29c149cacde7af2e00cd8952ee5767d6c221a2807c4094))#c968pfza", "timestamp": "now"}]
 ```
 
 ```bash
- bitcoin-core.cli importmulti '[{"desc": "sh(multi(2,0237a1e78baa7be5389c51f1836fb3b52c7163ea869281559c8ac94e69898793d4,03ab2e94ae215cb3bdba9269588f32c8df33c2140a554149850e01aa18b2bea645,0345e92ef8d7d03efce3878360b0fc57bb82d5d291e9e483c296f409165b80121b))#valuvj2y", "timestamp": "now", "watchonly": true}]'
+bitcoin-core.cli importdescriptors "[{\"desc\": \"$P2SH_DESCRIPTOR\", \"timestamp\": \"now\", "internal": true}]"
+
 =>
  [
   {
