--- a/bitcoin/2.bitcoin-core-details.md
+++ b/bitcoin/2.bitcoin-core-details.md
@@ -14,7 +14,50 @@
 [Ruby インストール方法](https://github.com/ShigeichiroYamasaki/yamalabo/blob/master/ruby/ruby.md)
 
 
-## UTXOの所有と discriptor
+
+## 各種トランザクションの構成を一連の流れで演習します
+
+以下のように，合計で８個のトランザクションを作成します．
+
+ubuntu での実施を前提にします．
+
+```
+
+(UTXOの資金)--> TX1 -+-->0.0002BTC VOUT:0 -->TX2(P2PK)  --> 0.00018BTC-+
+                    +-->0.0002BTC VOUT:1 -->TX3(P2PKH) --> 0.00018BTC-+
+                    +-->0.0002BTC VOUT:2 -->TX4(P2SH)  --> 0.00018BTC-+
+                    +-->0.0002BTC VOUT:3 -->TX5(P2WPKH)--> 0.00018BTC-+
+                    +-->0.0002BTC VOUT:4 -->TX6(P2WSH) --> 0.00018BTC-+
+                    +-->0.0002BTC VOUT:5 -->TX7(P2TR)  --> 0.00018BTC-+--> TX8
+                    +-->おつり
+```
+
+0. 事前にsignetのfaucet から0.002 BTC 以上のビットコインを得ておきます。
+1. TX1 faucetから得たUTXOをinputとして 7個のoutputを持つトランザクション (TX1) を作成し，署名して，ブロードキャストする
+2. 6個のUTXOを利用して，6個のトランザクション (TX2 ~ TX7) を作成しそれぞれ署名して，ブロードキャストする
+
+    ★ (TX2 ~ TX7) はそれぞれP2PK, P2PKH, P2SH, P2WPKH, P2WSH の5つのタイプのoutputを持つ
+3. 6個のタイプの異なるUTXOをinputとして，１個のUTXOにまとめるトランザクション TX8 を作成する
+    ★ P2SH, P2WSH のUTXOをワレットに認識させる必要があります。
+
+
+## 目次
+
+* [ descriptor ワレットの作成](#DESC)
+* [TX1: 7つのUTXOを生成する](#TX1)
+* [6種類のアドレスの生成](#ADDR)
+* [TX3: P2PKH トランザクションの作成](#TX3)
+* [TX4: P2SH トランザクションの作成](#TX4)
+* [TX5: P2WPKH トランザクションの作成](#TX5)
+* [TX6: P2WSH トランザクションの作成](#TX6)
+* [TX7: P2TR トランザクションの作成](#TX7)
+* [TX2: P2PK トランザクションの作成](#TX2)
+* [TX8: 6種類の UTXO を inputとするトランザクションの作成](#TX8)
+
+
+## <a id="DESC"> descriptor ワレットの作成</a>
+
+### UTXOの所有と discriptor
 
 当初，ブロックチェーン上のデジタル資産であるUTXOの所有の概念は，当事者の秘密鍵を中心に構成されていました．
 
@@ -54,48 +97,7 @@ sh(multi(2,037032106297741808e66c947dab836f3f3c28189596331e48861304674e2583d0,02
 wsh(multi(2,037032106297741808e66c947dab836f3f3c28189596331e48861304674e2583d0,0210c7796ac91075ff6d4708319094707a976d265263cac42cc535104803439f84,0359ee82a3b3ec86bc8c29c149cacde7af2e00cd8952ee5767d6c221a2807c4094))#04tn9tty
 ```
 
-## 各種トランザクションの構成を一連の流れで演習します
-
-以下のように，合計で８個のトランザクションを作成します．
-
-ubuntu での実施を前提にします．
-
-```
-
-(UTXOの資金)--> TX1 -+-->0.0002BTC VOUT:0 -->TX2(P2PK)  --> 0.00018BTC-+
-                    +-->0.0002BTC VOUT:1 -->TX3(P2PKH) --> 0.00018BTC-+
-                    +-->0.0002BTC VOUT:2 -->TX4(P2SH)  --> 0.00018BTC-+
-                    +-->0.0002BTC VOUT:3 -->TX5(P2WPKH)--> 0.00018BTC-+
-                    +-->0.0002BTC VOUT:4 -->TX6(P2WSH) --> 0.00018BTC-+
-                    +-->0.0002BTC VOUT:5 -->TX7(P2TR)  --> 0.00018BTC-+--> TX8
-                    +-->おつり
-```
-
-0. 事前にsignetのfaucet から0.002 BTC 以上のビットコインを得ておきます。
-1. TX1 faucetから得たUTXOをinputとして 7個のoutputを持つトランザクション (TX1) を作成し，署名して，ブロードキャストする
-2. 6個のUTXOを利用して，6個のトランザクション (TX2 ~ TX7) を作成しそれぞれ署名して，ブロードキャストする
-
-    ★ (TX2 ~ TX7) はそれぞれP2PK, P2PKH, P2SH, P2WPKH, P2WSH の5つのタイプのoutputを持つ
-3. 6個のタイプの異なるUTXOをinputとして，１個のUTXOにまとめるトランザクション TX8 を作成する
-    ★ P2SH, P2WSH のUTXOをワレットに認識させる必要があります。
-
-## descriptor ワレットの作成
-
-
-
-## 目次
-
-* [TX1: 7つのUTXOを生成する](#TX1)
-* [6種類のアドレスの生成](#ADDR)
-* [TX3: P2PKH トランザクションの作成](#TX3)
-* [TX4: P2SH トランザクションの作成](#TX4)
-* [TX5: P2WPKH トランザクションの作成](#TX5)
-* [TX6: P2WSH トランザクションの作成](#TX6)
-* [TX7: P2TR トランザクションの作成](#TX7)
-* [TX2: P2PK トランザクションの作成](#TX2)
-* [TX8: 6種類の UTXO を inputとするトランザクションの作成](#TX8)
-
-## <a id="TX1"> </a>TX1: 7つのUTXOを生成する
+## <a id="TX1">TX1: 7つのUTXOを生成する </a>
 
 ★ 以下はアドレス生成の例で，シェル変数にアドレスを代入しています．
 
@@ -595,7 +597,7 @@ UTXO_VOUT4=4
 UTXO_VOUT5=5
 ```
 
-## <a id="ADDR"> </a>6種類のビットコインアドレスの生成
+## <a id="ADDR">6種類のビットコインアドレスの生成 </a>
 
 6種類の outputのタイプへの送金には、それぞれ対応するアドレスタイプを持つ送金先アドレスが必要です。
 
@@ -908,7 +910,7 @@ echo $P2TR_ADDR
 tb1pzwmas3lmkrn63wtgulylmtx79fvg3x5e0d6u9g50l3y8c3k0hvxqez8qxa
 ```
 
-## <a id="TX3"> </a> TX3: P2PKH トランザクションの作成
+## <a id="TX3">TX3: P2PKH トランザクションの作成 </a>
 
 * txid: UTXO_TXID
 * vout: 1
@@ -1036,7 +1038,7 @@ P2PKH_TXID="f66f7c67f0e2edab7d27d316662c31a9a5f33fe68dd9725854fe04bb7f23563f"
 ```
 
 --
-## <a id="TX4"> </a> TX4: P2SH トランザクションの作成
+## <a id="TX4">TX4: P2SH トランザクションの作成 </a>
 
 * txid: UTXO_TXID
 * vout: 2
@@ -1148,7 +1150,7 @@ cd568cf3a8355c3be99ee47faedb68169a6dcc06c78afe71ff08a0743d1caf4b
 P2SH_TXID="cd568cf3a8355c3be99ee47faedb68169a6dcc06c78afe71ff08a0743d1caf4b"
 ```
 --
-## <a id="TX5"> </a> TX5: P2WPKH トランザクションの作成
+## <a id="TX5"> TX5: P2WPKH トランザクションの作成 </a>
 
 * txid: UTXO_TXID
 * vout: 3
@@ -1263,7 +1265,7 @@ bitcoin-core.cli sendrawtransaction 020000000001010f46fd7655915115ca5f229fda26fb
 P2WPKH_TXID="0bec2ecf9561b081d13d4dd6909a79114fdd3b9d9bfcc515cf9de96ccb31aa2c"
 ```
 
-## <a id="TX6"> </a> TX6: P2WSH トランザクションの作成
+## <a id="TX6">TX6: P2WSH トランザクションの作成 </a>
 
 * txid: UTXO_TXID
 * vout: 4
@@ -1378,7 +1380,7 @@ P2WSH_TXID="018e0a930dcefe84be09bb27387721f14f2e64e0e1b41f749eafca78c9b1c1fc"
 ```
 
 
-## <a id="TX7"> </a> TX7: P2TR トランザクションの作成
+## <a id="TX7">TX7: P2TR トランザクションの作成 </a>
 
 * txid: UTXO_TXID
 * vout: 5
@@ -1492,7 +1494,7 @@ P2TR_TXID="0903ffacbb7f212d81902d54979409610dc4b2c594a66789f35866d14f4e3dc1"
 --
 
 
-## <a id="TX2"> </a> TX2: P2PK トランザクションの作成
+## <a id="TX2">TX2: P2PK トランザクションの作成 </a>
 
 * txid: UTXO_TXID
 * vout: 0
@@ -1745,7 +1747,7 @@ P2PK_TXID="265b7d4497d8d87c548132e823833070fe80969d6bec93be2cb59c9ab4877640"
 ```
 --
 
-## <a id="TX8"> </a> TX8: 6種類の UTXO を inputとするトランザクションの作成
+## <a id="TX8">TX8: 6種類の UTXO を inputとするトランザクションの作成 </a>
 
 ### UTXOの確認
 
