bitcoin の基本を修正

--- a/bitcoin/1.bitcoin-core-basic.md
+++ b/bitcoin/1.bitcoin-core-basic.md
@@ -1,6 +1,6 @@
 # 1 Bitcoin Coreの基本
 
-2024/05/25 更新 Shigeichiro Yamasaki
+2024/05/31 更新 Shigeichiro Yamasaki
 
 ## bitcoin-cliコマンド
 
@@ -1492,7 +1492,12 @@ bitcoin-core.cli getnewaddress
 =>
 bcrt1qvye3q7thzws8wg5efktavumx4k2pr4evy5rw5a
 ```
-## マイニング 101ブロック
+### マイニング 101ブロック
+
+bitcoin では，マイニング成功後に 101 ブロックの後続ブロックが接続されると，コインベースの資金が確定し，マイナー（指定したアドレス）のものになる．
+
+
+```bash
 bitcoin-core.cli generatetoaddress 101 bcrt1qvye3q7thzws8wg5efktavumx4k2pr4evy5rw5a 10000000
 ```
 
