bitcoin の基本を修正

--- a/bitcoin/1.bitcoin-core-basic.md
+++ b/bitcoin/1.bitcoin-core-basic.md
@@ -2,6 +2,21 @@
 
 2024/05/31 更新 Shigeichiro Yamasaki
 
+## 目次
+
+* bitcoin-cliコマンド
+* bitcoind の停止と起動
+* bitcoin core RPC API
+* ビットコインネットワーク
+* ビットコインワレット
+* トランザクション情報
+*  トランザクションの構成
+* トランザクションのブロードキャスト
+* トランザクションの検証
+* ブロックチェーン
+* プルーフ・オブ・ワークによるマイニングの実行
+
+
 ## bitcoin-cliコマンド
 
 snap でインストールした場合
@@ -447,7 +462,9 @@ bitcoin-core.cli sendtoaddress tb1qfdmuhak44h3akp0dx6q5qpytuta6e6888mjlw4 0.001
 50dc0800c8421355e4bb719320f0216e5ac5ff21ed93bf06bf5ec2ec3a859fb5
 ```
 
-## トランザクションの一覧の表示
+## トランザクション情報
+
+### トランザクションの一覧の表示
 
 コマンドの文法
 
@@ -565,7 +582,7 @@ bitcoin-core.cli listtransactions
 ]
 ```
 
-## UTXO (未使用のアウトプット)の一覧
+### UTXO (未使用のアウトプット)の一覧
 
 コマンドの文法
 
@@ -660,7 +677,6 @@ bitcoin-core.cli listunspent
   * アウトプットのインデックス（vout）：
   * 金額(amount)：
 
-## トランザクション
 
 ### トランザクションのデータを検索する
 
@@ -1425,7 +1441,7 @@ bitcoin-core.cli getblock 00000114208c2281068d15a10b266dd49a4d723c797101a3f5dece
 }
 ```
 
-## プルーフ・オブ・ワークによるマイニング
+## プルーフ・オブ・ワークによるマイニングの実行
 
 ブロックのマイニングは次のコマンドで実行できますが，signet はマイニングの成功だけではブロック生成の権限がないので失敗してしまいます。実験するなら regtest モードでノードを起動しましょう。
 
