bitcoinの詳細の修正

--- a/bitcoin/2.bitcoin-core-details-1.md
+++ b/bitcoin/2.bitcoin-core-details-1.md
@@ -45,14 +45,8 @@ ubuntu での実施を前提にします．
 
 * [ descriptor ワレットの作成](#DESC)
 * [6種類のアドレスの生成](#ADDR)
-* [TX1: 7つのUTXOを生成する](#TX1)
-* [TX3: P2PKH トランザクションの作成](#TX3)
-* [TX4: P2SH トランザクションの作成](#TX4)
-* [TX5: P2WPKH トランザクションの作成](#TX5)
-* [TX6: P2WSH トランザクションの作成](#TX6)
-* [TX7: P2TR トランザクションの作成](#TX7)
-* [TX2: P2PK トランザクションの作成](#TX2)
-* [TX8: 6種類の UTXO を inputとするトランザクションの作成](#TX8)
+* [TX1: 7つのUTXOを生成するトランザクションの送信](#TX1)
+
 
 
 ##  <a id="DESC"> </a>descriptor ワレットの作成
@@ -506,7 +500,7 @@ echo $P2TR_ADDR
 tb1p4ktga0tpgca3an3aheynpf46qtnf2xn6f74n38ktxtfc6pe3x33qzu0xsv
 ```
 
-## <a id="TX1"> </a>7つのUTXOを生成する
+## <a id="TX1"> </a>7つのUTXOを生成するトランザクションの送信
 
 まず，１個のUTXOを７つに分割するために，７つの送金先アドレスを生成します．
 
