--- a/bitcoin/0.bitcoin-core-signet.md
+++ b/bitcoin/0.bitcoin-core-signet.md
@@ -1,6 +1,6 @@
 # 0. Bitcoin core Signet ノードの構築
 
-2024/05/24
+2024/06/7
 更新 Shigeichiro Yamasaki 
 
 ## install 方法
@@ -25,7 +25,7 @@ bitcon coreは「危険なアプリ」という扱いになっています。
 
 --
 
-### ubuntu 22.04LTS/の場合
+### ubuntu 24.04LTS/の場合
 
 #### snap でインストールする
 
@@ -84,6 +84,7 @@ nano ~/snap/bitcoin-core/common/.bitcoin/bitcoin.conf
 * 「設定ファイルを開く」ボタンをクリック
 * 設定ファイルを以下のように作成して保存
 
+★ blockfilterindex=1 を追加（2024/06/07)
 
 ```
 signet=1
@@ -91,6 +92,7 @@ txindex=1
 daemon=1
 server=1
 rest=1
+blockfilterindex=1 
 [signet]
 rpcuser=hoge
 rpcpassword=hoge
