--- a/bitcoin/1.bitcoin-core-basic.md
+++ b/bitcoin/1.bitcoin-core-basic.md
@@ -4,7 +4,7 @@
 
 ## 目次
 
-* bitcoin-cliコマンド
+* bitcoin クライアントコマンド
 * bitcoind の停止と起動
 * bitcoin core RPC API
 * ビットコインネットワーク
@@ -17,7 +17,7 @@
 * プルーフ・オブ・ワークによるマイニングの実行
 * シェルスクリプトの利用
 
-## bitcoin-cliコマンド
+## bitcoin クライアントコマンド
 
 snap でインストールした場合
 
@@ -25,14 +25,13 @@ snap でインストールした場合
 bitcoin-core.cli ＜コマンド＞
 ```
 
-
-通常インストールの場合
+MacOSX やソースコートからコンパイルしてインストールした場合
 
 ```bash
 bitcoin-cli ＜コマンド＞
 ```
 
-以下では　bitcoin-core.cli 　を bitcoind クライアントとして説明します。適宜，自分の環境に置き換えてコマンドを評価してください。
+以下では　bitcoin-core.cli として説明します。
 
 ## bitcoind の停止と起動
 
@@ -1717,11 +1716,28 @@ $D
 2024年 6月12日 水曜日 19時37分29秒 JST
 ```
 
+* ' " （シングルクォートとダブルクォート）
+
+シェルスクリプトでは，' （シングルクオート）や "（ダブルクォート）で囲まなくても文字列として扱われますが，文字列に空白が含まれる場合はクォーテーションで囲む必要があります．
+
+
+囲まれた文字列は文字列として扱われます．
+
+```bash
+Wallets='bitcoin-core.cli listwallets'
+
+$Wallets
+
+=>
+[
+  "alice"
+]
+
+```
 
 * echo コマンド
 
 python などのプログラミング言語での print文のように標準出力に文字列を出力するコマンドです．
-
 
 ```bash
 echo $MyAddr
@@ -1729,3 +1745,73 @@ echo $MyAddr
 =>
 tb1qdu6n0yhtm7lpyyhev9vrw7mfg9sd80rxmv4mmh
 ```
+
+空白を含む文字列の場合は クォーテーションをつけます
+
+```bash
+echo 'bitcoin-core.cli listwallets'
+
+=>
+bitcoin-core.cli listwallets
+
+echo "bitcoin-core.cli listwallets"
+
+=>
+bitcoin-core.cli listwallets
+```
+
+" （ダブルクォート）の文字列の中で変数を評価することができます．
+
+```bash
+echo "bitcoin-core.cli getaddressinfo $MyAddr"
+
+=>
+bitcoin-core.cli getaddressinfo tb1qdu6n0yhtm7lpyyhev9vrw7mfg9sd80rxmv4mmh
+```
+
+'（シングルクォート）の文字列の中では変数は評価されません
+
+```bash
+echo 'bitcoin-core.cli getaddressinfo $MyAddr'
+
+=>
+bitcoin-core.cli getaddressinfo $MyAddr
+```
+
+* 特殊文字とエスケープ
+
+以下の文字は特殊文字なので，そのまま記述しても文字としては扱われません
+
+```
+* ? [ ' " ` \ $ ; & ( ) | ~ < > # % = スペース タブ 改行
+```
+
+特殊文字を文字として扱いたい場合は，その前に \（バックスラッシュ）をつけます
+
+```bash
+H="\"hello\""
+
+=>
+echo $H
+"hello"
+```
+
+* ` (バックスラッシュ) や $() によるコマンド置換
+
+コマンドの中にコマンドの実行結果を埋め込むことができます．
+
+```bash
+echo date
+=>
+date
+
+echo `date`
+=>
+2024年 6月 13日 木曜日 00:55:18 JST
+
+echo $(date)
+=>
+2024年 6月 13日 木曜日 00:55:28 JST
+```
+
+
