シェルスクリプトの説明

--- a/bitcoin/3.bitcoin-core-details-2.md
+++ b/bitcoin/3.bitcoin-core-details-2.md
@@ -1,6 +1,6 @@
 # 3. bitcoin core の詳細-2
 
-2024/06/09  更新 Shigeichiro Yamasaki
+2024/06/13  更新 Shigeichiro Yamasaki
 
 ## 各種トランザクションの構成を一連の流れで演習します
 
@@ -35,7 +35,7 @@ ubuntu での実施を前提にします．
 
 
 
-## <a id="TX8">TX8: 6種類の UTXO の確認</a>
+## <a id="UTXO">TX8: 6種類の UTXO の確認</a>
 
 
 ```bash
