--- a/bitcoin/4.bitcoinrb.md
+++ b/bitcoin/4.bitcoinrb.md
@@ -642,7 +642,6 @@ fingerprint_path("tr")
 
 ```ruby
 seed = "074bc8d56a326f1177a1554bfb3a4dbb0d403defe532f412e947fce0123a9e3f"
-
 master_key = Bitcoin::ExtKey.generate_master(seed)
 ```
 
@@ -848,6 +847,7 @@ utxo_txid=utxo["txid"]
 utxo_vout=utxo["vout"]
 utxo_amount=utxo["amount"]
 utxo_scriptPubkey=utxo["scriptPubKey"]
+utxo_address=utxo["address"]
 ```
 
 ### トランザクションのテンプレートの作成
@@ -872,13 +872,13 @@ tx.in <<  Bitcoin::TxIn.new(out_point: outpoint)
 
 ```ruby
 # UTXOの残高
-amount = (utxo_amount*(10**8)).to_i
+amount_satoshi = (utxo_amount*(10**8)).to_i
 # 送金金額 0.0005 BTCとします
-send_value=(0.0005*(10**8)).to_i
+value_satoshi = (0.0005*(10**8)).to_i
 # 送金手数料 0.00002 BTC とします
 fee = 2000
 # おつり
-change = amount - send_value - fee
+change_satoshi = amount - send_value - fee
 ```
 
 #### 送信先アドレスの生成
@@ -896,14 +896,14 @@ kyoko
 
 ```ruby
 script_pubkey0 = Bitcoin::Script.parse_from_addr(kyoko)
-tx.out << Bitcoin::TxOut.new(value: send_value, script_pubkey: script_pubkey0)
+tx.out << Bitcoin::TxOut.new(value: value_satoshi, script_pubkey: script_pubkey0)
 ```
 
 おつり  OUTPUT (おつりの送付先アドレスを hanako とします)
 
 ```ruby
 script_pubkey1 = Bitcoin::Script.parse_from_addr(hanako)
-tx.out << Bitcoin::TxOut.new(value: change, script_pubkey: script_pubkey1)
+tx.out << Bitcoin::TxOut.new(value: change_satoshi, script_pubkey: script_pubkey1)
 ```
 
 ### 未署名のトランザクションの確認
@@ -939,8 +939,6 @@ tx
 inputのインデックスと参照先UTXOの scriptPubKey（ここではinput 0)のペイロード形式（バイナリ）
 
 ```ruby
-input_index = 0
-
 # utxoのscriptPubkey のペイロード
 utxo_scriptPubkey_payload = utxo_scriptPubkey.htb
 
@@ -969,7 +967,8 @@ prev_scriptPubkey = Bitcoin::Script.parse_from_addr(hanako)
 
 
 ```ruby
-sighash = tx.sighash_for_input(input_index,prev_scriptPubkey, sig_version: :witness_v0, amount: utxo_amount)
+input_index=0
+sighash = tx.sighash_for_input(input_index, prev_scriptPubkey, sig_version: :witness_v0, amount: amount_satoshi)
 
 => ">\x0E(\xD1\xAC\xEF\t\xF5\xFE\x14\xAF\xDE\xC6\xBF\xFD)~\xD1\xDB\x00\x83\xD5\n\x9E\xB3F\\\xB5I:\x97\xC4"
 ```
@@ -1037,7 +1036,7 @@ tx.to_hex
 
 
 ```ruby
-result = bitcoinRPC('sendrawtransaction', [tx.to_hex])
+txid = bitcoinRPC('sendrawtransaction', [tx.to_hex])
 
 ```
 
@@ -1051,3 +1050,167 @@ tx.wtxid
 => "89e1cdf79f8f2f44e06569f38764b3eafe5451ea584aa3af48e6424916d36d2a"
 ```
 
+## まとめたプログラム
+
+テストデータ
+```ruby
+seed = "074bc8d56a326f1177a1554bfb3a4dbb0d403defe532f412e947fce0123a9e3f"
+master_key = Bitcoin::ExtKey.generate_master(seed)
+# テスト用アカウントと鍵
+keyHanako = master_key.derive(84, true).derive(1, true).derive(0, true)
+keyKyoko = master_key.derive(84, true).derive(1, true).derive(0, true).derive(0, true)
+## アドレス
+hanako = keyHanako.addr
+kyoko = keyKyoko.addr
+
+# 送金者 hanako
+# 受領者 kyoko
+# 送金金額 0.0003 BTC
+```
+
+## まとめたトランザクション送信プログラム
+
+```ruby
+#  共通部分
+require 'bitcoin'
+require 'net/http'
+require 'json'
+include Bitcoin
+include Bitcoin::Opcodes
+Bitcoin.chain_params = :signet
+HOST="localhost"
+PORT=38332          # mainnetの場合は 8332
+RPCUSER="hoge"      # bitcoin core RPCユーザ名
+RPCPASSWORD="hoge"  # bitcoin core パスワード
+FEE = 0.00002       # 手数料
+# bitcoin core RPC を利用するメソッド
+def bitcoinRPC(method, params)
+    http = Net::HTTP.new(HOST, PORT)
+    request = Net::HTTP::Post.new('/')
+    request.basic_auth(RPCUSER, RPCPASSWORD)
+    request.content_type = 'application/json'
+    request.body = { method: method, params: params, id: 'jsonrpc' }.to_json
+    JSON.parse(http.request(request).body)["result"]
+end
+
+# トランザクションの構成
+
+def create_tx(d_addr, keySigner, value)
+    utxos = bitcoinRPC('listunspent', [])
+    # 指定したアドレスが所有するUTXOの配列
+    utxo_addr = utxos.select{|x| x["address"]==keySigner.addr}
+    # ここでは，簡単にするため，input で消費する UTXOは一つだけとする
+    utxo = utxo_addr[0]
+    utxo_txid = utxo["txid"]
+    utxo_vout = utxo["vout"]
+    utxo_amount = utxo["amount"]
+    utxo_scriptPubkey = utxo["scriptPubKey"]
+    amount_satoshi = (utxo_amount*(10**8)).to_i
+    value_satoshi = (value*(10**8)).to_i
+    fee = 2000
+    change_satoshi = amount_satoshi - value_satoshi - fee
+    # トランザクションの構成
+    tx = Bitcoin::Tx.new
+    # INPUTの作成
+    outpoint = Bitcoin::OutPoint.from_txid(utxo_txid, utxo_vout)
+    tx.in <<  Bitcoin::TxIn.new(out_point: outpoint)
+    # OUTPUTの作成
+    script_pubkey0 = Bitcoin::Script.parse_from_addr(d_addr)
+    tx.out << Bitcoin::TxOut.new(value: value_satoshi, script_pubkey: script_pubkey0)
+    script_pubkey1 = Bitcoin::Script.parse_from_addr(keySigner.addr)
+    tx.out << Bitcoin::TxOut.new(value: change_satoshi, script_pubkey: script_pubkey1)
+    # INPUTへの署名
+    prev_scriptPubkey = Bitcoin::Script.parse_from_payload(utxo_scriptPubkey.htb)
+    # トランザクションハッシュ (Segwit)
+    input_index=0
+    sighash = tx.sighash_for_input(input_index, prev_scriptPubkey, sig_version: :witness_v0, amount: amount_satoshi)
+    # トランザクションへの署名
+    key = keySigner.key
+    signature = key.sign(sighash) + [Bitcoin::SIGHASH_TYPE[:all]].pack('C')
+    # 署名と公開鍵を INPUT に設定
+    tx.in[0].script_witness.stack << signature
+    tx.in[0].script_witness.stack << key.pubkey.htb
+    return tx
+end
+
+
+# テスト
+tx = create_tx(kyoko, keyHanako, 0.0003)
+
+tx
+
+=> 
+#<Bitcoin::Tx:0x000000010bb1d260
+...
+irb(main):150> tx
+=> 
+#<Bitcoin::Tx:0x000000010bb1d260
+ @inputs=
+  [#<Bitcoin::TxIn:0x000000010bb1d0d0
+    @out_point=
+     #<Bitcoin::OutPoint:0x000000010bc49da0 @index=0, @tx_hash="f3776ce567c27404c197446bbd7c5158704f8508d80c334bb8c6eb8c7ef79d93">,
+    @script_sig=#<Bitcoin::Script:0x000000010bc49d78 @chunks=[]>,
+    @script_witness=
+     #<Bitcoin::ScriptWitness:0x000000010bc49d28
+      @stack=
+       ["0D\x02 \x18!:\x14\xCA\xAF\xB8\x82q*f\xCDH!'ZK\x17\tm+\xCE\x92`H\n\xAD,\vC\x80.\x02 )H3+:\x83\x9D\xE9G\xCF\x89-\x8E\xBD\x9Dqn\xA1\\\x8D3\xD8\xE9u\xE1\xB4JWK\x19\xB4\xAD\x01",
+        "\x03LXy\x13eb\xD6F\x85\\v\xF5\x8E\xB7@\x03\xC0R\xE1\xF7a\xF2\xEA\x96\x1E\xF6\x1F\e\bg\x80\xA5"]>,
+    @sequence=4294967295>],
+ @lock_time=0,
+ @outputs=
+  [#<Bitcoin::TxOut:0x000000010bc441e8
+    @script_pubkey=#<Bitcoin::Script:0x000000010bc445d0 @chunks=["\x00", "\x14\xA0\x12]I\xE2\"/\x8D\xB5\x12(%\xDDS\r}\x93q\x9Bv"]>,
+    @value=29999>,
+   #<Bitcoin::TxOut:0x000000010bc41f60
+    @script_pubkey=#<Bitcoin::Script:0x000000010bc421e0 @chunks=["\x00", "\x14Y\x94D\xCD\xF9\x11vB-\xD0q\x8D\xBD\x06%\x06;\xAB\xA61"]>,
+    @value=2918171>],
+ @version=1>
+
+```
+
+* トランザクションの検証
+
+```ruby
+tx.valid?
+
+=> true
+
+tx.to_h
+
+=>
+{:txid=>"9b542a42779b82ee63bec7381ab6d516095ba6b20d43ee257242dd4d6960b6f3",
+ :hash=>"7787ce7e76b4be5a0240db616693f16b4e313bdf8cb20f81b093d2e75eb4c979",
+ :version=>1,
+ :size=>222,
+ :vsize=>141,
+ :locktime=>0,
+ :vin=>
+  [{:txid=>"416c9155be79026dd9a7c53e473dd587de653d89a9542e7db1f28ad87adc7bdb",
+    :vout=>1,
+    :script_sig=>{:asm=>"", :hex=>""},
+    :txinwitness=>
+     ["304402203007e6614cb82dfcf613da2e9db927bac7e165cb983fb78e942b8c4f3d8a589d02205ff41b95740dd261b2fb5b90a87d06855803004ca78d1deaa92c9378ba86d48f01",
+      "034c5879136562d646855c76f58eb74003c052e1f761f2ea961ef61f1b086780a5"],
+    :sequence=>4294967295}],
+ :vout=>
+  [{:value=>0.00029999,
+    :script_pubkey=>
+     {:asm=>"0 a0125d49e2222f8db5122825dd530d7d93719b76",
+      :hex=>"0014a0125d49e2222f8db5122825dd530d7d93719b76",
+      :type=>"witness_v0_keyhash",
+      :address=>"tb1q5qf96j0zyghcmdgj9qja65cd0kfhrxmkgjx26c"},
+    :n=>0},
+   {:value=>0.00068001,
+    :script_pubkey=>
+     {:asm=>"0 60a2490f3c6578c8cd29fbf1a115ac54c97ad9b1",
+      :hex=>"001460a2490f3c6578c8cd29fbf1a115ac54c97ad9b1",
+      :type=>"witness_v0_keyhash",
+      :address=>"tb1qvz3yjreuv4uv3nffl0c6z9dv2nyh4kd3rfd50n"},
+    :n=>1}]}
+```
+
+* トランザクションのブロードキャスト
+
+```ruby
+txid = bitcoinRPC('sendrawtransaction', [tx.to_hex])
+```
