--- a/ethereum/3. ethers.js.md
+++ b/ethereum/3. ethers.js.md
@@ -1,6 +1,6 @@
 # 3. ethers.js 入門
 
-ethereum RPC の javaSCript ラッピングクライアントの使い方
+ethereum RPC の ラッピングクライアントの使い方
 
 最終更新 2024/07/28 Shigeichiro Yamasaki
 
