--- a/ethereum/2. console.md
+++ b/ethereum/2. console.md
@@ -1,6 +1,6 @@
 # 2. Ethereum ブロックチェーンのコンソール操作
 
-最終更新 2024/07/28 Shigeichiro Yamasaki
+最終更新 2024/07/30 Shigeichiro Yamasaki
 
 ## Hardhat node の利用
 
@@ -27,11 +27,14 @@ Deployed Addresses
 TokenModule#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ```
 
-### hardhat console コマンドで node のプロンプトになります
+### コンソールを起動する
+
+hardhat console コマンドで node のプロンプトになります
 
 ```bash
 npx hardhat console --network localhost 
 
+=>
 Type ".help" for more information.
 >
 
