--- a/ethereum/4. HTLC.md
+++ b/ethereum/4. HTLC.md
@@ -207,45 +207,80 @@ Type ".help" for more information.
 > 
 ```
 
+
 ### テストの実行
 
 ```bash
 npx hardhat test 
 ```
 
-## ethers.js によるデプロイプログラム
+
+## Hardhat Ignition
+
+#### hardhat Ignition モジュール プラグインのインストール
+
+プロジェクトルートで実行
+
+```bash
+npm install --save-dev @nomicfoundation/hardhat-ignition-ethers
+```
+
+### hardhat Ignition モジュールの作成
+
+`./ignition/modules` ディレクトリの `Lock.js` を `HTLC.js` に変更します
+
+```bash
+mv ignition/module/Lock.js ignition/module/HTLC.js
+```
+
+ファイルを編集します
+
+```bash
+nano ignition/modules/HTLC.js
+```
 
 ```js
-const { ethers } = require("ethers");
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
-async function main() {
-    // プロバイダーとウォレットを設定
-    const provider = new ethers.providers.JsonRpcProvider("http://localhost:8545"); // あなたのEthereumノードのURL
-    const privateKey = "YOUR_PRIVATE_KEY"; // デプロイするアカウントのプライベートキー
-    const wallet = new ethers.Wallet(privateKey, provider);
+module.exports = buildModule("HTLCModule", (m) => {
+  // 受領者アドレス
+  const [receiver] = await ethers.getSigners();
+  // ロック時間を１時間にする
+  const unlockTime = Math.floor(Date.now() / 1000) + 3600;
+  // プリイメージのハッシュ
+  const hashlock = ethers.sha256(ethers.toUtf8Bytes("secret"));
+  // HTLCコントラクト
+  const htlc = m.contract("HTLC", [receiver, hashlock, unlockTime], {});
+  return { htlc };}
+ );
 
-    // コントラクトABIとバイトコード
-    const contractABI = [
-        // ABIはコンパイル後のJSONファイルからコピーします
-    ];
-    const contractBytecode = "YOUR_CONTRACT_BYTECODE"; // コンパイル後のバイトコード
 
-    // コントラクトファクトリの作成
-    const contractFactory = new ethers.ContractFactory(contractABI, contractBytecode, wallet);
 
-    // コントラクトのデプロイ
-    const receiverAddress = "RECEIVER_ADDRESS"; // 受取人のアドレス
-    const hashlock = ethers.sha256(ethers.toUtf8Bytes("secret")); // プレイメージのハッシュ
-    const timelock = Math.floor(Date.now() / 1000) + 3600; // 1時間後のタイムロック
-
-    const contract = await contractFactory.deploy(receiverAddress, hashlock, timelock, { value: ethers.utils.parseEther("1.0") });
-    await contract.deployed();
-
-    console.log("HTLC deployed at:", contract.address);
-}
-
-main().catch((error) => {
-    console.error(error);
-    process.exitCode = 1;
-});
 ```
+
+##  Hardhat Network へのデプロイ
+
+ignition コマンドでデプロイすることができます．
+
+デプロイした結果，デプロイしたスマートコントラクトのコントラクトアカウントのアドレスが返ってきます
+
+```bash
+npx hardhat ignition deploy ./ignition/modules/HTLC.js --network localhost
+
+=>
+Hardhat Ignition 🚀
+
+Deploying [ HTLCModule ]
+
+Batch #1
+  Executed HTLCModule#HTLC
+
+[ HTLCModule ] successfully deployed 🚀
+
+Deployed Addresses
+
+HTLCModule#HTLC - 0x5FbDB2315678afecb367f032d93F642f64180aa3
+
+```
+
+
