javaScript テストを更新

--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2024/09/23
+2024/09/25
 作成，更新 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -22,17 +22,21 @@ Ethereum の開発環境
 sudo apt update
 sudo apt install curl git
 curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
-sudo apt-get install -y nodejs
+source ~/.profile
+
+nvm install --lts
 ```
 
 ### MacOSX
 
 ```bash
-curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
-nvm install 20
-nvm use 20
-nvm alias default 20
-npm install npm --global
+brew update
+brew install curl git
+source $(brew --prefix nvm)/nvm.sh
+echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
+source ~/.zprofile
+
+nvm install --lts
 ```
 
 ## <a id="project">Hardhat プロジェクトの新規作成</a>
@@ -47,15 +51,15 @@ npm install npm --global
 
 ```bash
 cd ~
-mkdir hardhat-projects
-cd hardhat-projects/
+mkdir hardhat
+cd hardhat/
 ```
 
 * ここでは，プロジェクトルートを hardhat-tutorial という名前のフォルダにしますが，適宜自分のプロジェクト名に修正してください
 
 ```bash
-mkdir hardhat-tutorial
-cd hardhat-tutorial
+mkdir tutorial
+cd tutorial
 ```
 
 以下では，npm 7 を利用します．
@@ -125,14 +129,15 @@ npm install --save-dev hardhat
 
 初期化コマンド `npx hardhat init` 実行後に
 
-▶ Create an empty hardhat.config.js を選択
+▶ Create an empty hardhat.config.js を選択（キーボードの矢印キーを使って）
 
 プロジェクトルートディレクトリに，空の hardhat.config.js ファイルを作成します．
 
 ```bash
 npx hardhat init
+```
 
-
+```bash
 =>
 888    888                      888 888               888
 888    888                      888 888               888
