--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -208,6 +208,9 @@ hardhat.config.js	node_modules		package.json
 
 ```bash
 npx hardhat compile
+
+=>
+Nothing to compile
 ```
 
 * plugin
@@ -359,6 +362,10 @@ nano test/Token.js
 ```
 
 ファイルの内容
+
+hardhat では chaiを Node.js のcommonJSモジュールとして import ではなく require で読み込む
+
+ES6 モジュールかcommonJS モジュールかの区別は package.json で決定される
 
 ```js
 const { expect } = require("chai");
